Width for logged out views is 960px, fixed the logged in tab color for business section, alignment of radio buttons on sitting>edit attendance and fixed some padding issues

--- a/bungeni.main/branches/spb/bungeni/portal/static/html/resources/40-authoring.css
+++ b/bungeni.main/branches/spb/bungeni/portal/static/html/resources/40-authoring.css
@@ -267,8 +267,10 @@ dl#context_actions.actionMenu .actionMenuContent ul li a#pdf,
 dl#context_actions.actionMenu .actionMenuContent ul li a#delete,
 dl#context_actions.actionMenu .actionMenuContent ul li a#respond,
 dl#context_actions.actionMenu .actionMenuContent ul li a#feedrss,
+dl#context_actions.actionMenu .actionMenuContent ul li a#feedakomantoso,
 dl#context_actions.actionMenu .actionMenuContent ul li a#files,
-dl#context_actions.actionMenu .actionMenuContent ul li a#download {
+dl#context_actions.actionMenu .actionMenuContent ul li a#download,
+dl#context_actions.actionMenu .actionMenuContent ul li a#st-attendance {
 	padding: 0 .5em;
 	margin: 0;
 	float: left;
@@ -312,11 +314,17 @@ dl#context_actions.actionMenu .actionMenuContent ul li a#respond {
 dl#context_actions.actionMenu .actionMenuContent ul li a#feedrss {
 	background-image: url(images/rss.png);
 }
+dl#context_actions.actionMenu .actionMenuContent ul li a#feedakomantoso {
+	background-image: url(images/akoma.png);
+}
 dl#context_actions.actionMenu .actionMenuContent ul li a#download {
 	background-image: url(images/download.png);
 }
 dl#context_actions.actionMenu .actionMenuContent ul li a#files {
 	background-image: url(images/database.png) ;
+}
+dl#context_actions.actionMenu .actionMenuContent ul li a#st-attendance {
+	background-image: url(images/page_white_edit.png) ;
 }
 #templateMenu li a {
     padding-left: 16px;
